--- a/pyscript.toml
+++ b/pyscript.toml
@@ -1,3 +1,3 @@
-name = "Panel and hvPlot"
-description = "Leverage hvPlot interactive feature and extending it with Panel."
+name = "Ai Lab School - Práctica 1"
+description = "Hecho Por Bryan Oliveros"
 packages = ["bokeh==3.2.2", "panel==1.3.8", "markdown-it-py", "numpy", "pandas", "hvplot", "pyodide-http"]
